--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - "3000:3000"
     volumes:
       - ./front:/app
+      - /app/node_modules
     depends_on:
       - django
     networks:
