--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "3000:3000"
     volumes:
       - ./front:/app
-      - /app/node_modules
+      - ./front/node_modules:/app/node_modules
     depends_on:
       - django
     networks:
